# tim_data

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
data/: icml.csv  lava.csv  td.csv  tim.csv
data/converge/: icml.csv  lava.csv  origin.csv  td.csv  tim.csv
data/keep_ratio_change/: dve_10.csv  icml_10.csv  lava_10.csv  origin_10.csv  tim_10.csv
data/mnist_256/: README.md  infl_icml_all_epochs_relabel_000_pct_042.csv  infl_tim_all_epochs_relabel_000_pct_042.csv
data/mnsit_256/: infl_dve_all_epochs_relabel_000_pct_042.csv  infl_lava_all_epochs_relabel_000_pct_042.csv  loo_valuation_matrix.csv
data/mut_precision/: precision_prepared.csv
data/mutli_seed/loo_similar_256_seed_10_icml/: infl_icml_all_epochs_relabel_000_pct_010.csv
data/mutli_seed/loo_similar_256_seed_10_lava/: infl_lava_all_epochs_relabel_000_pct_010.csv
data/mutli_seed/loo_similar_256_seed_10_loo/: infl_loo_all_epochs_relabel_000_pct_010.csv
data/mutli_seed/loo_similar_256_seed_10_tim/: infl_dve_all_epochs_relabel_000_pct_010.csv  infl_tim_all_epochs_relabel_000_pct_010.csv  training_metrics_010.csv
data/precision/: precision_prepared.csv
output/: epoch_correlation_all.csv  epoch_correlation_dve.csv  epoch_correlation_icml.csv  epoch_correlation_lava.csv  epoch_correlation_tim.csv  multi_seed_all_correlations.csv  multi_seed_correlation_statistics.csv  seed_avg_then_method_stats.csv  sum_epoch_correlation_all.csv  sum_multi_seed_correlation_statistics.csv  sum_multi_seed_correlations.csv
plots/: precision_prepared.csv
src/: __init__.py  cal_corelation.py  multi_seed_cal_correlation.py  plot_keep_ratio_change.py  plot_loss.py  plot_mut_precision.py  plot_precision.py  plot_style.py
(+90 files in other folders)
