[project]
name = "tim-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scipy>=1.16.2",
]

[project.scripts]
plot_precision = "src.plot_precision:main"
plot_loss = "src.plot_loss:main"
plot_keep_ratio = "src.plot_keep_ratio_change:main"
cal_corelation = "src.cal_corelation:main"
multi_seed_cal_correlation = "src.multi_seed_cal_correlation:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
